--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-image-crop": "^11.0.6",
     "react-router-dom": "^6.26.0",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.4.0",
