--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,6 +5,7 @@
         "rootDir": "./src",
         "outDir": "./dist",
         "esModuleInterop": true,
+        "resolveJsonModule": true,
         "allowSyntheticDefaultImports": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
