--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "lucide-react": "^0.424.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.2.1",
     "react-image-crop": "^11.0.6",
     "react-router-dom": "^6.26.0",
